# nexus-ai

./: .dockerignore  .gitignore  =1.6.0  =2.12.0  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  STATUS.md  Techplan.md  WSL2_SETUP.md  activate_nexus.sh  config.yml  docker-compose.yml  install.py  install_wsl2.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-wsl2-complete.txt  requirements-wsl2.txt  requirements.txt  requirements_no_evdev.txt  run_nexus.py  serpent  setup.py  test_nexus_100.py  test_nexus_core.py  test_nexus_final.py  upload_wiki.md  verify_installation.py
analytics/: test_20250829_061409.jsonl  test_20250829_061430.jsonl  test_project_20250829_061223.jsonl  test_project_20250829_061305.jsonl  test_project_20250829_061328.jsonl
helm/nexus-ai/: Chart.yaml  values.yaml
k8s/: deployment.yaml  gpu-deployment.yaml
nexus/: README.md  __init__.py  cli.py  complete_implementation.py  config.yaml  game_registry.py  main.py  production_fixes.py  pyproject.toml  pytest.ini  requirements-test.txt  visual_debugger.py  window_controller.py
nexus/agents/: __init__.py  agent_manager.py  base.py  game_agent.py  ppo_agent.py  ppo_full.py  rainbow_dqn_agent.py  rainbow_dqn_full.py  recorder_agent.py  rl_agent.py  scripted_agent.py
nexus/analytics/: client.py  experiment_tracker.py
nexus/api/: __init__.py  game_api.py  models.py  server.py
nexus/capture/: __init__.py  base.py  capture_manager.py  dxcam_backend.py  frame_collector.py  frame_grabber.py  game_frame_buffer.py  mss_backend.py  screen_capture.py
nexus/cli/: __init__.py  main.py  nexus_cli.py  terminal_menu.py
nexus/core/: __init__.py  base.py  config.py  exceptions.py  frame_grabber.py  logger.py  plugin_manager.py
nexus/dashboard/: package.json
nexus/dashboard/public/: index.html
nexus/dashboard/src/: App.js
nexus/dashboard/src/components/: Sidebar.js  TopBar.js
nexus/dashboard/src/pages/: Dashboard.js  DebugView.js  LiveView.js
nexus/debug/: __init__.py  visual_debugger.py
nexus/emulators/: __init__.py  android_bridge.py  bluestacks.py
nexus/environments/: __init__.py  base.py  environment.py  environment_manager.py
nexus/events/: __init__.py  game_event_system.py
nexus/game/: game_api.py
nexus/gui/: __init__.py  dashboard.py  main_window.py  visual_debugger.py
nexus/input/: __init__.py  advanced_controller.py  base.py  controller.py  enhanced_recorder.py  human_like.py  native_controller.py  playback.py  pyautogui_controller.py  recorder.py
nexus/input/controller/: __init__.py  controller_mapper.py  controller_recorder.py  generic_controller.py  haptic_feedback.py  playstation_controller.py  virtual_gamepad.py  xbox_controller.py
nexus/input/gamepad/: __init__.py  controller_mapper.py  controller_recorder.py  gamepad_base.py  generic_controller.py  haptic_feedback.py  playstation_controller.py  virtual_gamepad.py  xbox_controller.py
nexus/launchers/: __init__.py  base.py  browser_launcher.py  enhanced_launchers.py  executable_launcher.py  game_launcher.py  steam_launcher.py
nexus/ml/: keras_context_classifier.py
nexus/mobile/: __init__.py  adb_client.py
nexus/ocr/: ocr_engine.py
nexus/plugins/: __init__.py  plugin_system.py
nexus/plugins/example_game/: example_game.py  manifest.yaml
nexus/plugins/templates/agent_plugin/: agent_plugin.py.j2  manifest.yaml.j2
nexus/plugins/templates/game_plugin/: game_plugin.py.j2  manifest.yaml.j2
nexus/profiling/: __init__.py  performance_profiler.py
nexus/realtime/: wamp_integration.py
nexus/sprites/: advanced_locator.py  asset_extractor.py  sprite_manager.py  sprite_system.py
nexus/tests/: __init__.py  conftest.py  test_agents.py  test_capture.py  test_config.py  test_vision.py
nexus/training/: __init__.py  dataset.py  trainer.py
nexus/utils/: __init__.py  decorators.py  memory.py  memory_fixes.py  performance.py  platform.py  validation.py  x11_helper.py
nexus/vision/: __init__.py  context_classification.py  context_classifiers.py  cv_utils.py  detector.py  frame_processing.py  frame_processor.py  frame_transformer.py  game_frame.py  object_recognition.py  ocr.py  ocr_utils.py  raycasting.py  sprite_detection.py  template_matcher.py  transformation_pipeline.py  vision_pipeline.py
nexus/visual_debugger/: debugger_app.py
nexus/visualization/: __init__.py  experiment_manager.py  metrics_tracker.py  tensorboard_logger.py  training_dashboard.py  video_logger.py
nexus/window/: win32_window_controller.py  window_controller.py  window_controller_fixed.py
plugins/discord_integration/: plugin.py
plugins/performance_monitor/: plugin.py
scripts/: detect_platform.py  docker-build.sh  setup_wsl2.sh  verify_installation.py
tests/integration/: test_full_system.py
wiki/: Agent-Development.md  Game-Plugins.md  Home.md  Installation.md  Quick-Start-Guide.md
